--- a/2012.html
+++ b/2012.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="UTF-8">
@@ -10,41 +10,42 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="shortcut icon" type="image/PNG" href="assets/images/favicon.png">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
-	<title>Patrick Bateman</title>
+	<title>Rust Cohle</title>
 </head>
 
 <body>
 
-	<!------- ▼  Header. ▼ ------->
-	<header>
-		<nav class="navbar navbar-expand-md navbar-light bg-light">
+<!------- ▼  Header. ▼ ------->
+<header>
+	<nav class="navbar navbar-expand-md navbar-light bg-light">
 
-			<a href="index.html" class="navbar-brand bateman">R. C.</a>
+		<a href="index.html" class="navbar-brand bateman">R. C.</a>
 
-			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#HamburgerItems" aria-controls="#HamburgerItems" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+		<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#HamburgerItems" aria-controls="#HamburgerItems" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-			<div class="collapse navbar-collapse" id="HamburgerItems">
-				<ul class="navbar-nav ml-auto">
-					<li class="nav-item ml-auto">
-						<a href="index.html" class="nav-link">Home</a>
-					</li>
-					<li class="nav-item ml-auto">
-						<a href="wellness.html" class="nav-link">Wellness</a>
-					</li>
-					<li class="nav-item ml-auto">
-						<a href="restaurants.html" class="nav-link">Restaurants</a>
-					</li>
-					<li class="nav-item ml-auto">
-						<a href="music.html" class="nav-link">Music</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-	</header>
+		<div class="collapse navbar-collapse" id="HamburgerItems">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item ml-auto">
+					<a href="index.html" class="nav-link">Inicio</a>
+				</li>
+				<li class="nav-item ml-auto">
+					<a href="rutina.html" class="nav-link">Rutina</a>
+				</li>
+				<li class="nav-item ml-auto">
+					<a href="aficiones.html" class="nav-link">Aficiones</a>
+				</li>
+				<li class="nav-item ml-auto">
+					<a href="biografia.html" class="nav-link">Biografía</a>
+				</li>
+			</ul>
+		</div>
+	</nav>
+</header>
 
 	<!------- ▼  Banner. ▼ ------->
 	<div class="container-fluid">
@@ -52,113 +53,110 @@
 			<hr>
 			<div class="row">
 				<div class="col col-12 col-md-6 col-lg-4">
-					<img src="assets/images/psycho-mode.png" class="mw-100">
+					<img src="assets/images/rust_2012.png" class="mw-100">
                     </div>
 					<div class="col col-12 col-md-6 col-lg-8 text-center text-md-left">
-						<h2 class="mt-5 mb-1">PATRICK BATEMAN</h2>
-						<h3 class="mb-3">MURDERS & EXECUTIONS</h3>
-						<a class="btn btn-outline-danger mb-5" href="index.html">BATEMAN MODE</a>
+						<h2 class="mt-5 mb-1">RUST COHLE</h2>
+						<h3 class="mb-3">Ex-policia, Actualmente Barman</h3>
+						<a class="btn btn-outline-danger mb-5" href="index.html">AÑO 1995</a>
 					</div>
 				</div>
 				<hr>
 			</div>
 		</div>
 
-	<!------- ▼  Footer ▼ ------->
+		<!------- ▼  Footer ▼ ------->
 
-	<footer>
-		<div class="container-fluid bg-light px-auto pt-4">
-			<div id="wrapper">
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-						<div class="col">
-							<h3 class="footer-header">Contact
-								<hr>
-							</h3>
-						</div>
-						<div class="col">
-							<p class="footer-paragraph">
-								Pierce & Pierce,<br>
-                                358 Exchange Place,<br>
-                                New York, N.Y. 10099
+		<footer>
+			<div class="container-fluid bg-light px-auto pt-4">
+				<div id="wrapper">
+					<div class="row">
+						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+							<div class="col">
+								<h3 class="footer-header">Contacto
+									<hr>
+								</h3>
+							</div>
+							<div class="col">
+								<p class="footer-paragraph">
+									Criminal Investigations Division,<br>
+								5903 Coliseum Blvd.,<br>
+                                Alexandria, LA 71303
                             </p>
-								<p>
-									<a href="tel:+2125556342">212 555 6342</a>
-								</p>
+									<p>
+										<a href="tel:+2125556342">318 484 2190</a>
+									</p>
+							</div>
 						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-						<div class="col ">
-							<h3 class="footer-header">Sitemap
-								<hr>
-							</h3>
-                            <ul class="navbar-nav ml-auto">
-					<li class="text-center">
-						<a href="index.html">Home</a>
-					</li>
-					<li class="text-center">
-						<a href="wellness.html">Wellness</a>
-					</li>
-					<li class="text-center">
-						<a href="restaurants.html">Restaurants</a>
-					</li>
-					<li class="text-center">
-						<a href="music.html">Music</a>
-					</li>
-				</ul>
+						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+							<div class="col ">
+								<h3 class="footer-header">Sitios
+									<hr>
+								</h3>
+								<ul class="navbar-nav ml-auto">
+									<li class="text-center">
+										<a href="index.html">Inicio</a>
+									</li>
+									<li class="text-center">
+										<a href="rutina.html">Rutina</a>
+									</li>
+									<li class="text-center">
+										<a href="aficiones.html">Aficiones</a>
+									</li>
+									<li class="text-center">
+										<a href="biografia.html">Biografia</a>
+									</li>
+								</ul>
+							</div>
 						</div>
-					</div>
-					<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
-						<form>
-							<div class="row">
-								<div class="col col-12">
-									<h3 class="footer-header">Newsletter Sign-Up
-										<hr>
-									</h3>
-								</div>
-								<div class="col col-12">
-									<input type="text" class="form-control" placeholder="Name">
-                                </div>
+						<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
+							<form>
+								<div class="row">
 									<div class="col col-12">
-										<input type="email" class="form-control" placeholder="Email">
+										<h3 class="footer-header"> Suscríbete
+											<hr>
+										</h3>
+									</div>
+									<div class="col col-12">
+										<input type="text" class="form-control" placeholder="Nombre">
                                 </div>
 										<div class="col col-12">
-											<input type="submit" class="form-control" placeholder="Last name">
+											<input type="email" class="form-control" placeholder="Email">
                                 </div>
-										</div>
-						</form>
+											<div class="col col-12">
+												<input type="submit" class="form-control" placeholder="Apellidos">
+                                </div>
+											</div>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
 
-		<!------- ▼  Sub-footer for personal brand ▼ ------->
-		<div class="container-fluid bg-dark">
-			<div id="wrapper">
-				<div class="row">
-					<div class='col-12 py-2 text-right text-white'>
-						Rowan Copeland
+			<!------- ▼  Sub-footer for personal brand ▼ ------->
+			<div class="container-fluid bg-dark">
+				<div id="wrapper">
+					<div class="row">
+						<div class='col-12 py-2 text-right text-white'>
+							Iván Piña Castillo
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
 
-					<!------- ▼  Bootstrap Javascript tags. ▼ ------->
+		<!------- ▼  Bootstrap Javascript tags. ▼ ------->
 
-					<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-						integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-						crossorigin="anonymous">
-					</script>
-					<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-						integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-						crossorigin="anonymous">
-					</script>
-					<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-						integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-						crossorigin="anonymous">
-					</script>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
 
 </body>
 
