--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 
-			<a href="index.html" class="navbar-brand bateman">R. C.</a>
+			<a href="index.html" class="navbar-brand cohle">R. C.</a>
 
 			<button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#HamburgerItems" aria-controls="#HamburgerItems" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
