--- a/rutina.html
+++ b/rutina.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="UTF-8">
@@ -10,9 +10,10 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="shortcut icon" type="image/PNG" href="assets/images/favicon.png">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
-	<title>American Psycho</title>
+	<title>Rust Cohle</title>
 </head>
 
 <body>
@@ -21,7 +22,7 @@
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 
 			<a href="index.html"
-				class="navbar-brand"><span class="bateman">P</span>ATRICK<span class="bateman"> BATEMAN</span></a>
+				class="navbar-brand"><span class="cohle">R</span>UST<span class="cohle"> COHLE</span></a>
 
 			<section>
 			</section>
@@ -32,16 +33,16 @@
 			<div class="collapse navbar-collapse" id="HamburgerItems">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item ml-auto">
-						<a href="index.html" class="nav-link">Home</a>
+						<a href="index.html" class="nav-link">Inicio</a>
 					</li>
 					<li class="nav-item ml-auto">
-						<a href="wellness.html" class="nav-link">Wellness</a>
+						<a href="rutina.html" class="nav-link">Rutina</a>
 					</li>
 					<li class="nav-item ml-auto">
-						<a href="restaurants.html" class="nav-link">Restaurants</a>
+						<a href="aficiones.html" class="nav-link">Aficiones</a>
 					</li>
 					<li class="nav-item ml-auto">
-						<a href="music.html" class="nav-link">Music</a>
+						<a href="biografia.html" class="nav-link">Biografia</a>
 					</li>
 				</ul>
 			</div>
@@ -52,7 +53,7 @@
 		<div class="opaque-overlay">&nbsp;</div>
 		<div class="row">
 			<div class="col-12">
-				<h1>Wellness</h1>
+				<h1>Rutina</h1>
 			</div>
 		</div>
 	</div>
@@ -68,29 +69,29 @@
 					</div>
 				</div>
 				<div class="col col-12 col-md-8 mt-3">
-					<h3 class="text-center text-md-left">My Morning Routine</h3>
+					<h3 class="text-center text-md-left">Mi Rutina Diaria</h3>
 					<ol class="text-left">
 						<li>
-							<h4>Ice Pack</h4>
-							<p>In the morning, if my face is a little puffy, I'll put on an Ice-Pack while doing my
-								stomach crunches <br>(I can do 1000 now)
+							<h4>Meditación</h4>
+							<p>Me levanto sobre las 5 y medito frente a un crucifijo mientras ejercito mi cuerpo.
+								<br>(También me fumo de 5 a 10 cigarrillos)
 						</li>
 						<li>
-							<h4>Shower</h4>
-							<p>After I remove the Ice-Pack, I used a deep pore cleansing lotion. In the shower I use a
-								water-activated gel cleanser, then a honey almond body scrub, and on the face - an
-								exfoliating gel scrub.
+							<h4>Ducha</h4>
+							<p>Tras pasar cerca una hora y media meditando, me dispongo a darme una ducha no sin antes tomar un poco de Whysky. 
+								Necesito mantenerme despierto ya que apenas duermo, por lo que también ingiero grandes cantidades de café y pastillas.
 						</li>
 						<li>
-							<h4>Facial Mask</h4>
-							<p>After my shower, I apply a herb-mint facial mask, which I leave on for 10 minutes while I
-								prepare the rest of my routine.
+							<h4>De vuelta al trabajo</h4>
+							<p>Soy el primero en llegar a la oficina, algo habitual. Una vez allí sigo trbajando en el caso. 
+								Mi compañero suele llegar algo tarde, pero no luce tan cansado como yo.
+								Todos en la oficina murmuran acerca de mí.
 						</li>
 						<li>
-							<h4>Skincare</h4>
-							<p>Once I remove my facial mask, I use an aftershave with little or no alcohol, because
-								alcohol dries your face out and makes you look older. Then I apply moisturizer, an
-								anti-aging eye balm followed by a final moisturizing protective lotion.
+							<h4>Trabajo extra</h4>
+							<p>Mi compañero se dispone a volver a casa con su familia. Yo de eso ya no tengo, así que empleo mi tiempo en investigar por mi cuenta.
+								Sé de numerosos bares y prostíbulos donde puedo conseguir información vital para el caso. Espero no beber más de la cuenta
+								pero siempre es complicado.
 						</li>
 					</ol>
 				</div>
@@ -99,98 +100,98 @@
 
 
 
-	<!------- ▼  Footer ▼ ------->
+		<!------- ▼  Footer ▼ ------->
 
-	<footer>
-		<div class="container-fluid bg-light px-auto pt-4">
-			<div id="wrapper">
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-						<div class="col">
-							<h3 class="footer-header">Contact
-								<hr>
-							</h3>
-						</div>
-						<div class="col">
-							<p class="footer-paragraph">
-								Pierce & Pierce,<br>
-                                358 Exchange Place,<br>
-                                New York, N.Y. 10099
+		<footer>
+			<div class="container-fluid bg-light px-auto pt-4">
+				<div id="wrapper">
+					<div class="row">
+						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+							<div class="col">
+								<h3 class="footer-header">Contacto
+									<hr>
+								</h3>
+							</div>
+							<div class="col">
+								<p class="footer-paragraph">
+									Criminal Investigations Division,<br>
+								5903 Coliseum Blvd.,<br>
+                                Alexandria, LA 71303
                             </p>
-								<p>
-									<a href="tel:+2125556342">212 555 6342</a>
-								</p>
+									<p>
+										<a href="tel:+2125556342">318 484 2190</a>
+									</p>
+							</div>
 						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-						<div class="col ">
-							<h3 class="footer-header">Sitemap
-								<hr>
-							</h3>
-                            <ul class="navbar-nav ml-auto">
-					<li class="text-center">
-						<a href="index.html">Home</a>
-					</li>
-					<li class="text-center">
-						<a href="wellness.html">Wellness</a>
-					</li>
-					<li class="text-center">
-						<a href="restaurants.html">Restaurants</a>
-					</li>
-					<li class="text-center">
-						<a href="music.html">Music</a>
-					</li>
-				</ul>
+						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+							<div class="col ">
+								<h3 class="footer-header">Sitios
+									<hr>
+								</h3>
+								<ul class="navbar-nav ml-auto">
+									<li class="text-center">
+										<a href="index.html">Inicio</a>
+									</li>
+									<li class="text-center">
+										<a href="rutina.html">Rutina</a>
+									</li>
+									<li class="text-center">
+										<a href="aficiones.html">Aficiones</a>
+									</li>
+									<li class="text-center">
+										<a href="biografia.html">Biografia</a>
+									</li>
+								</ul>
+							</div>
 						</div>
-					</div>
-					<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
-						<form>
-							<div class="row">
-								<div class="col col-12">
-									<h3 class="footer-header">Newsletter Sign-Up
-										<hr>
-									</h3>
-								</div>
-								<div class="col col-12">
-									<input type="text" class="form-control" placeholder="Name">
-                                </div>
+						<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
+							<form>
+								<div class="row">
 									<div class="col col-12">
-										<input type="email" class="form-control" placeholder="Email">
+										<h3 class="footer-header"> Suscríbete
+											<hr>
+										</h3>
+									</div>
+									<div class="col col-12">
+										<input type="text" class="form-control" placeholder="Nombre">
                                 </div>
 										<div class="col col-12">
-											<input type="submit" class="form-control" placeholder="Last name">
+											<input type="email" class="form-control" placeholder="Email">
                                 </div>
-										</div>
-						</form>
+											<div class="col col-12">
+												<input type="submit" class="form-control" placeholder="Apellidos">
+                                </div>
+											</div>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
 
-		<!------- ▼  Sub-footer for personal brand ▼ ------->
-		<div class="container-fluid bg-dark">
-			<div id="wrapper">
-				<div class="row">
-					<div class='col-12 py-2 text-right text-white'>
-						Rowan Copeland
+			<!------- ▼  Sub-footer for personal brand ▼ ------->
+			<div class="container-fluid bg-dark">
+				<div id="wrapper">
+					<div class="row">
+						<div class='col-12 py-2 text-right text-white'>
+							Iván Piña Castillo
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
 
-	<!------- ▼  Bootstrap Javascript tags. ▼ ------->
+		<!------- ▼  Bootstrap Javascript tags. ▼ ------->
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
 
 </body>
 
