--- a/aficiones.html
+++ b/aficiones.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="UTF-8">
@@ -10,19 +10,19 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<link rel="shortcut icon" type="image/PNG" href="assets/images/favicon.png">
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
-	<title>Patrick Bateman</title>
+	<title>Rust Cohle</title>
 </head>
 
 <body>
-
 	<!------- ▼  Header. ▼ ------->
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 
 			<a href="index.html"
-				class="navbar-brand"><span class="bateman">P</span>ATRICK<span class="bateman"> BATEMAN</span></a>
+				class="navbar-brand"><span class="cohle">R</span>UST<span class="cohle"> COHLE</span></a>
 
 			<section>
 			</section>
@@ -33,28 +33,27 @@
 			<div class="collapse navbar-collapse" id="HamburgerItems">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item ml-auto">
-						<a href="index.html" class="nav-link">Home</a>
+						<a href="index.html" class="nav-link">Inicio</a>
 					</li>
 					<li class="nav-item ml-auto">
-						<a href="wellness.html" class="nav-link">Wellness</a>
+						<a href="rutina.html" class="nav-link">Rutina</a>
 					</li>
 					<li class="nav-item ml-auto">
-						<a href="restaurants.html" class="nav-link">Restaurants</a>
+						<a href="aficiones.html" class="nav-link">Aficiones</a>
 					</li>
 					<li class="nav-item ml-auto">
-						<a href="music.html" class="nav-link">Music</a>
+						<a href="biografia.html" class="nav-link">Biografia</a>
 					</li>
 				</ul>
 			</div>
 		</nav>
 	</header>
-
 	<!------- ▼  Banner. ▼ ------->
-	<div class="container-fluid restaurant-container">
+	<div class="container-fluid aficiones-container">
 		<div class="opaque-overlay">&nbsp;</div>
 		<div class="row">
 			<div class="col-12">
-				<h1>New Yorks Eateries</h1>
+				<h1>Aficiones de Rust</h1>
 			</div>
 		</div>
 	</div>
@@ -68,9 +67,9 @@
 				</div>
 			</div>
 
-			<div class="row restaurant-panel">
+			<div class="row aficiones-panel">
 				<div class="col col-12 col-sm-8 text-center text-sm-right mt-3">
-					<h3>Dorsia</h3>
+					<h3>Pescar</h3>
 					<p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 						Ipsum
 						has been the industry's standard dummy text ever since the 1500s, when an unknown
@@ -82,28 +81,26 @@
 					<blockquote class="blockquote text-left">
 						<h4 class="mb-0 font-weight-bold font-italic">"Lorem ipsum dolor sit amet, consectetur
 							adipiscing elit. Integer posuere erat a ante."</h4>
-						<footer class="blockquote-footer"><cite title="Source Title">New York Times</cite></footer>
+						<footer class="blockquote-footer"><cite title="Source Title">Rust Cohle</cite></footer>
 					</blockquote>
-					<hr>
-					<h2 class="text-left">★★★★★</h2>
 				</div>
 
-                <div class=" col-12 col-sm-4 restaurant-review">
+                <div class=" col-12 col-sm-4 aficiones-review">
 					<div class="media">
 						<div class="d-none d-sm-inline ml-auto">
 						</div>
 					</div>
 				</div>
 			</div>
-			<div class="row restaurant-panel-left">
-				<div class="col col-12 col-sm-4 restaurant-review-left">
+			<div class="row aficiones-panel-left">
+				<div class="col col-12 col-sm-4 aficiones-review-left">
 					<div class="media">
 						<div class="d-none d-sm-inline ml-auto">
 						</div>
 					</div>
 				</div>
 				<div class="col col-12 col-sm-8 text-center text-sm-left mt-3">
-					<h3>Dorsia</h3>
+					<h3>Meditar</h3>
 					<p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 						Ipsum
 						has been the industry's standard dummy text ever since the 1500s, when an unknown
@@ -115,15 +112,13 @@
 					<blockquote class="blockquote text-right">
 						<h4 class="mb-0 font-weight-bold font-italic">"Lorem ipsum dolor sit amet, consectetur
 							adipiscing elit. Integer posuere erat a ante."</h4>
-						<footer class="blockquote-footer"><cite title="Source Title">New York Times</cite></footer>
+						<footer class="blockquote-footer"><cite title="Source Title">Rust Cohle</cite></footer>
 					</blockquote>
-					<hr>
-					<h2 class="text-right">★★★★★</h2>
 				</div>
 			</div>
-			<div class="row restaurant-panel">
+			<div class="row aficiones-panel">
 				<div class="col col-12 col-sm-8 text-center text-sm-right mt-3">
-					<h3>Dorsia</h3>
+					<h3>Mantener a los hombres malos a ralla</h3>
 					<p class="mb-3">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
 						Ipsum
 						has been the industry's standard dummy text ever since the 1500s, when an unknown
@@ -135,13 +130,11 @@
 					<blockquote class="blockquote text-left">
 						<h4 class="mb-0 font-weight-bold font-italic">"Lorem ipsum dolor sit amet, consectetur
 							adipiscing elit. Integer posuere erat a ante."</h4>
-						<footer class="blockquote-footer"><cite title="Source Title">New York Times</cite></footer>
+						<footer class="blockquote-footer"><cite title="Source Title">Rust Cohle</cite></footer>
 					</blockquote>
-					<hr>
-					<h2 class="text-left">★★★★★</h2>
 				</div>
 
-                <div class="col col-12 col-sm-4 restaurant-review">
+                <div class="col col-12 col-sm-4 aficiones-review">
 					<div class="media">
 						<div class="d-none d-sm-inline ml-auto">
 						</div>
@@ -151,98 +144,98 @@
 		</div>
     </div>
 
-	<!------- ▼  Footer ▼ ------->
+		<!------- ▼  Footer ▼ ------->
 
-	<footer>
-		<div class="container-fluid bg-light px-auto pt-4">
-			<div id="wrapper">
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-						<div class="col">
-							<h3 class="footer-header">Contact
-								<hr>
-							</h3>
-						</div>
-						<div class="col">
-							<p class="footer-paragraph">
-								Pierce & Pierce,<br>
-                                358 Exchange Place,<br>
-                                New York, N.Y. 10099
+		<footer>
+			<div class="container-fluid bg-light px-auto pt-4">
+				<div id="wrapper">
+					<div class="row">
+						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+							<div class="col">
+								<h3 class="footer-header">Contacto
+									<hr>
+								</h3>
+							</div>
+							<div class="col">
+								<p class="footer-paragraph">
+									Criminal Investigations Division,<br>
+								5903 Coliseum Blvd.,<br>
+                                Alexandria, LA 71303
                             </p>
-								<p>
-									<a href="tel:+2125556342">212 555 6342</a>
-								</p>
+									<p>
+										<a href="tel:+2125556342">318 484 2190</a>
+									</p>
+							</div>
 						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-						<div class="col ">
-							<h3 class="footer-header">Sitemap
-								<hr>
-							</h3>
-                            <ul class="navbar-nav ml-auto">
-					<li class="text-center">
-						<a href="index.html">Home</a>
-					</li>
-					<li class="text-center">
-						<a href="wellness.html">Wellness</a>
-					</li>
-					<li class="text-center">
-						<a href="restaurants.html">Restaurants</a>
-					</li>
-					<li class="text-center">
-						<a href="music.html">Music</a>
-					</li>
-				</ul>
+						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+							<div class="col ">
+								<h3 class="footer-header">Sitios
+									<hr>
+								</h3>
+								<ul class="navbar-nav ml-auto">
+									<li class="text-center">
+										<a href="index.html">Inicio</a>
+									</li>
+									<li class="text-center">
+										<a href="rutina.html">Rutina</a>
+									</li>
+									<li class="text-center">
+										<a href="aficiones.html">Aficiones</a>
+									</li>
+									<li class="text-center">
+										<a href="biografia.html">Biografia</a>
+									</li>
+								</ul>
+							</div>
 						</div>
-					</div>
-					<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
-						<form>
-							<div class="row">
-								<div class="col col-12">
-									<h3 class="footer-header">Newsletter Sign-Up
-										<hr>
-									</h3>
-								</div>
-								<div class="col col-12">
-									<input type="text" class="form-control" placeholder="Name">
-                                </div>
+						<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
+							<form>
+								<div class="row">
 									<div class="col col-12">
-										<input type="email" class="form-control" placeholder="Email">
+										<h3 class="footer-header"> Suscríbete
+											<hr>
+										</h3>
+									</div>
+									<div class="col col-12">
+										<input type="text" class="form-control" placeholder="Nombre">
                                 </div>
 										<div class="col col-12">
-											<input type="submit" class="form-control" placeholder="Last name">
+											<input type="email" class="form-control" placeholder="Email">
                                 </div>
-										</div>
-						</form>
+											<div class="col col-12">
+												<input type="submit" class="form-control" placeholder="Apellidos">
+                                </div>
+											</div>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
 
-		<!------- ▼  Sub-footer for personal brand ▼ ------->
-		<div class="container-fluid bg-dark">
-			<div id="wrapper">
-				<div class="row">
-					<div class='col-12 py-2 text-right text-white'>
-						Rowan Copeland
+			<!------- ▼  Sub-footer for personal brand ▼ ------->
+			<div class="container-fluid bg-dark">
+				<div id="wrapper">
+					<div class="row">
+						<div class='col-12 py-2 text-right text-white'>
+							Iván Piña Castillo
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
 
-	<!------- ▼  Bootstrap Javascript tags. ▼ ------->
+		<!------- ▼  Bootstrap Javascript tags. ▼ ------->
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
 
 </body>
 
