--- a/biografia.html
+++ b/biografia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
 	<meta charset="UTF-8">
@@ -10,20 +10,20 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<script src="https://kit.fontawesome.com/420a3cb873.js" crossorigin="anonymous"></script>
-	<link href="assets/css/style.css" rel="stylesheet" type="text/css">
+	<link rel="shortcut icon" type="image/PNG" href="assets/images/favicon.png">
+	<link rel="stylesheet" href="assets/css/style.css" type="text/css">
 
-	<title>Patrick Bateman</title>
+	<title>Rust Cohle</title>
 </head>
 
 <body>
 
-	<!------- ▼  Header. ▼ ------->
+		<!------- ▼  Header. ▼ ------->
 	<header>
 		<nav class="navbar navbar-expand-md navbar-light bg-light">
 
 			<a href="index.html"
-				class="navbar-brand"><span class="bateman">P</span>ATRICK<span class="bateman"> BATEMAN</span></a>
+				class="navbar-brand"><span class="cohle">R</span>UST<span class="cohle"> COHLE</span></a>
 
 			<section>
 			</section>
@@ -34,16 +34,16 @@
 			<div class="collapse navbar-collapse" id="HamburgerItems">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item ml-auto">
-						<a href="index.html" class="nav-link">Home</a>
+						<a href="index.html" class="nav-link">Inicio</a>
 					</li>
 					<li class="nav-item ml-auto">
-						<a href="wellness.html" class="nav-link">Wellness</a>
+						<a href="rutina.html" class="nav-link">Rutina</a>
 					</li>
 					<li class="nav-item ml-auto">
-						<a href="restaurants.html" class="nav-link">Restaurants</a>
+						<a href="aficiones.html" class="nav-link">Aficiones</a>
 					</li>
 					<li class="nav-item ml-auto">
-						<a href="music.html" class="nav-link">Music</a>
+						<a href="biografia.html" class="nav-link">Biografia</a>
 					</li>
 				</ul>
 			</div>
@@ -51,11 +51,11 @@
 	</header>
 
 	<!------- ▼  Banner. ▼ ------->
-	<div class="container-fluid music-container">
+	<div class="container-fluid bio-container">
 		<div class="opaque-overlay">&nbsp;</div>
 		<div class="row">
 			<div class="col-12">
-				<h1>Music</h1>
+				<h1>Biografía</h1>
 			</div>
 		</div>
 	</div>
@@ -68,47 +68,40 @@
 				</div>
 			</div>
 
-			<div class="row music-panel-left">
-				<div class="col col-12 col-sm-4 music-review-left">
+			<div class="row bio-panel-left">
+				<div class="col col-12 col-sm-4 bio-review-left">
 					<div class="media">
 						<div class="d-none d-sm-inline ml-auto">
 						</div>
 					</div>
 				</div>
 				<div class="col col-12 col-sm-8 text-center text-sm-left mt-3">
-					<h3>Huey Lewis and the News</h3>
+					<h3>Frase Mítica</h3>
                     <br>
-					<p>Their early work was a little too new wave for my taste. But when Sports came out in '83, I think they really came into their own, 
-                    commercially and artistically. The whole album has a clear, crisp sound, and a new sheen of consummate professionalism that really gives the songs a big boost. 
-                    He's been compared to Elvis Costello, but I think Huey has a far more bitter, cynical sense of humor. 
-                    In '87, Huey released this; Fore!, their most accomplished album. 
-                    I think their undisputed masterpiece is "Hip To Be Square". A song so catchy, most people probably don't listen to the lyrics. 
-                    But they should, because it's not just about the pleasures of conformity and the importance of trends. 
-                    It's also a personal statement about the band itself.</p>
+					<p>"Somos cosas que trabajan bajo la ilusión de tener un yo; una acumulación de sensorial,
+						experiencia y sentimiento, programados con total seguridad de que cada uno somos alguien,
+						cuando en realidad todo el mundo es nadie."</p>
 					<blockquote class="blockquote text-right">
-						<h4 class="mb-0 font-weight-bold font-italic">I think their undisputed masterpiece is "Hip To Be Square".</h4>
+						<h4 class="mb-0 font-weight-bold font-italic">El detective Rust a su compañero Martin Hart.</h4>
 					</blockquote>
 				</div>
 			</div>
-			<div class="row music-panel">
+			<div class="row bio-panel">
 				<div class="col col-12 col-sm-8 text-center text-sm-right mt-3">
-					<h3>Phil Collins & Genesis</h3>
+					<h3>Vida Temprana</h3>
                     <br>
-					<p>I've been a big Genesis fan ever since the release of their 1980 album, Duke. Before that, 
-                    I really didn't understand any of their work. Too artsy, too intellectual. It was on Duke where Phil Collins' presence became more apparent. 
-                    I think Invisible Touch was the group's undisputed masterpiece. It's an epic meditation on intangibility.
-                    At the same time, it deepens and enriches the meaning of the preceding three albums.
-                    You can practically hear every nuance of every instrument. In terms of lyrical craftsmanship, the sheer songwriting, this album hits a new peak of professionalism. 
-                    Take the lyrics to Land of Confusion. In this song, Phil Collins addresses the problems of abusive political authority. 
-                    In Too Deep is the most moving pop song of the 1980s, about monogamy and commitment. The song is extremely uplifting. 
-                    Their lyrics are as positive and affirmative as anything I've heard in rock.
-                    Phil Collins' solo career seems to be more commercial and therefore more satisfying, in a narrower way. 
-                    Especially songs like In the Air Tonight and Against All Odds. 
-                    But I also think Phil Collins works best within the confines of the group, than as a solo artist, and I stress the word artist. 
-                    Sussudio, a great, great song, a personal favorite.</p>
-					<blockquote class="blockquote text-left">
-						<h4 class="mb-0 font-weight-bold font-italic">I think Invisible Touch was the group's undisputed masterpiece. It's an epic meditation on intangibility.</h4>
-					</blockquote>
+					<p>Rust nació en Texas, pero luego se mudó con su padre a Alaska, donde pasó la mayor parte de su infancia. 
+						Más tarde deja Alaska y regresa a Texas, supuestamente porque prefería la temperatura y las condiciones climáticas allí. 
+						Luego se casó con una mujer llamada Claire. Los dos tenían una hija, Sophia Cohle, que murió trágicamente en un accidente automovilístico. 
+						La pérdida de su hija condujo rápidamente al divorcio de Cohle, así como a su adicción al alcohol. 
+						Cohle pasó del robo a los narcóticos y finalmente se volvió adicto a la cocaína y posiblemente a otras sustancias narcóticas. 
+						En algún momento durante su tiempo en narcóticos, mató a un adicto a la metanfetamina por inyectar metanfetamina a su pequeña hija. 
+						El fiscal estatal le dio a Cohle la opción de ir a prisión por asesinato en primer grado o aceptar ser su narco encubierto profundo, 
+						por un período de tiempo no especificado. Cohle se vio obligado a pasar cuatro años encubierto, y en febrero de 1993 mató a tres 
+						miembros del cartel y recibió tres disparos con una pistola calibre .25. Durante su recuperación de los disparos y de sus adicciones 
+						a las sustancias, estuvo internado en un hospital psiquiátrico en Texas. Tras su liberación, se le ofreció la jubilación con pensión 
+						completa, pero rechazó esa oferta a favor de la transferencia a una división de homicidios. Luego, sus superiores lo trasladaron a Luisiana. En Louisiana, vive solo y no tiene amigos, familia o relaciones, solo vive para su trabajo. Intenta mantenerse sobrio, pero ocasionalmente no lo logra, principalmente debido al dolor por su hija. Cohle también es propenso a las alucinaciones auditivas y visuales, 
+						como resultado de su abuso de sustancias durante sus días como narco encubierto.</p>
 				</div>
 				<div class="col col-12 col-sm-4 genesis-review-left">
 					<div class="media">
@@ -118,7 +111,7 @@
 				</div>
 			</div>
 
-			<div class="row music-panel-left">
+			<div class="row bio-panel-left">
 				<div class="col col-12 col-sm-4 whitney-review-left">
 					<div class="media">
 						<div class="d-none d-sm-inline ml-auto">
@@ -126,21 +119,16 @@
 					</div>
 				</div>
 				<div class="col col-12 col-sm-8 text-center text-sm-left mt-3">
-					<h3>Whitney Houston</h3>
+					<h3>El Caso del Yellow King</h3>
                     <br>
-					<p>Whitney Houston's debut LP, called simply Whitney Houston had 4 number one singles on it.
-                    It's hard to choose a favorite among so many great tracks, but "The Greatest Love of All" is one of the best, 
-                    most powerful songs ever written about self-preservation, dignity. 
-                    Its universal message crosses all boundaries and instills one with the hope that it's not too late to better ourselves. 
-                    Since it's impossible in this world we live in to empathize with others, we can always empathize with ourselves. 
-                    It's an important message, crucial really. And it's beautifully stated on the album. </p>
-					<blockquote class="blockquote text-right">
-						<h4 class="mb-0 font-weight-bold font-italic">"The Greatest Love of All" is one of the best, 
-                    most powerful songs ever written about self-preservation, dignity. </h4>
-					</blockquote>
+					<p>Luisiana 1995, se encuentra a una joven debajo de un árbol desnuda y con solo una venda en los ojos y una "corona" hecha 
+						de astas de ciervo, posando como si rezara al gran árbol solitario. Una celosía de ramitas, como una trampa para 
+						pájaros cajún, se encuentra junto a su cuerpo. La mujer es identificada como Dora Kelly Lange, una ex prostituta. 
+						Cohle ya está convencido de que esta no es la primera víctima del asesino, afirmando que es demasiado específico.
+					</p>
 					</div>
 				</div>
-				<div class="col col-12 col-sm-4 music-review-left">
+				<div class="col col-12 col-sm-4 bio-review-left">
 					<div class="media">
 						<div class="d-none d-sm-inline ml-auto">
 						</div>
@@ -151,98 +139,98 @@
 	</div>
 	</div>
 	</div>
-	<!------- ▼  Footer ▼ ------->
+		<!------- ▼  Footer ▼ ------->
 
-	<footer>
-		<div class="container-fluid bg-light px-auto pt-4">
-			<div id="wrapper">
-				<div class="row">
-					<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-						<div class="col">
-							<h3 class="footer-header">Contact
-								<hr>
-							</h3>
-						</div>
-						<div class="col">
-							<p class="footer-paragraph">
-								Pierce & Pierce,<br>
-                                358 Exchange Place,<br>
-                                New York, N.Y. 10099
+		<footer>
+			<div class="container-fluid bg-light px-auto pt-4">
+				<div id="wrapper">
+					<div class="row">
+						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+							<div class="col">
+								<h3 class="footer-header">Contacto
+									<hr>
+								</h3>
+							</div>
+							<div class="col">
+								<p class="footer-paragraph">
+									Criminal Investigations Division,<br>
+								5903 Coliseum Blvd.,<br>
+                                Alexandria, LA 71303
                             </p>
-								<p>
-									<a href="tel:+2125556342">212 555 6342</a>
-								</p>
+									<p>
+										<a href="tel:+2125556342">318 484 2190</a>
+									</p>
+							</div>
 						</div>
-					</div>
-					<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
-						<div class="col ">
-							<h3 class="footer-header">Sitemap
-								<hr>
-							</h3>
-                            <ul class="navbar-nav ml-auto">
-					<li class="text-center">
-						<a href="index.html">Home</a>
-					</li>
-					<li class="text-center">
-						<a href="wellness.html">Wellness</a>
-					</li>
-					<li class="text-center">
-						<a href="restaurants.html">Restaurants</a>
-					</li>
-					<li class="text-center">
-						<a href="music.html">Music</a>
-					</li>
-				</ul>
+						<div class="col-12 col-md-6 col-lg-4 text-center text-md-left">
+							<div class="col ">
+								<h3 class="footer-header">Sitios
+									<hr>
+								</h3>
+								<ul class="navbar-nav ml-auto">
+									<li class="text-center">
+										<a href="index.html">Inicio</a>
+									</li>
+									<li class="text-center">
+										<a href="rutina.html">Rutina</a>
+									</li>
+									<li class="text-center">
+										<a href="aficiones.html">Aficiones</a>
+									</li>
+									<li class="text-center">
+										<a href="biografia.html">Biografia</a>
+									</li>
+								</ul>
+							</div>
 						</div>
-					</div>
-					<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
-						<form>
-							<div class="row">
-								<div class="col col-12">
-									<h3 class="footer-header">Newsletter Sign-Up
-										<hr>
-									</h3>
-								</div>
-								<div class="col col-12">
-									<input type="text" class="form-control" placeholder="Name">
-                                </div>
+						<div class="col-12 col-md-12 col-lg-4 text-center text-md-left">
+							<form>
+								<div class="row">
 									<div class="col col-12">
-										<input type="email" class="form-control" placeholder="Email">
+										<h3 class="footer-header"> Suscríbete
+											<hr>
+										</h3>
+									</div>
+									<div class="col col-12">
+										<input type="text" class="form-control" placeholder="Nombre">
                                 </div>
 										<div class="col col-12">
-											<input type="submit" class="form-control" placeholder="Last name">
+											<input type="email" class="form-control" placeholder="Email">
                                 </div>
-										</div>
-						</form>
+											<div class="col col-12">
+												<input type="submit" class="form-control" placeholder="Apellidos">
+                                </div>
+											</div>
+							</form>
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
 
 
-		<!------- ▼  Sub-footer for personal brand ▼ ------->
-		<div class="container-fluid bg-dark">
-			<div id="wrapper">
-				<div class="row">
-					<div class='col-12 py-2 text-right text-white'>
-						Rowan Copeland
+			<!------- ▼  Sub-footer for personal brand ▼ ------->
+			<div class="container-fluid bg-dark">
+				<div id="wrapper">
+					<div class="row">
+						<div class='col-12 py-2 text-right text-white'>
+							Iván Piña Castillo
+						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</footer>
+		</footer>
 
-	<!------- ▼  Bootstrap Javascript tags. ▼ ------->
+		<!------- ▼  Bootstrap Javascript tags. ▼ ------->
 
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-		integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
-	</script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
-	</script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-		integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
-	</script>
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+			integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous">
+		</script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+			integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+		</script>
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+			integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous">
+		</script>
 
 </body>
 
