--- a/rutina.html
+++ b/rutina.html
@@ -49,7 +49,7 @@
 		</nav>
 	</header>
 	<!------- ▼  Banner. ▼ ------->
-	<div class="container-fluid wellness-container">
+	<div class="container-fluid rutina-container">
 		<div class="opaque-overlay">&nbsp;</div>
 		<div class="row">
 			<div class="col-12">
@@ -61,8 +61,8 @@
 	<!------- ▼  About Section ▼ ------->
 	<div class="container-fluid">
 		<div id="wrapper">
-			<div class="row wellness-panel">
-				<div class="col col-12 col-md-4 wellness-image">
+			<div class="row rutina-panel">
+				<div class="col col-12 col-md-4 rutina-image2">
 					<div class="media">
 						<div class="d-none d-sm-inline ml-auto">
 						</div>
